Moving data cache to shared container
- Introducing app group (configurable through xcconfig
- Extensions of Bundle and FileManager for "Sharing"
- remove URLImage and handle image thumbnails in MyRadioModel
- prefetching image thumbnails when refreshing content.

--- a/Config.xcconfig
+++ b/Config.xcconfig
@@ -2,6 +2,7 @@
 //   the variables are used in the Info.plist file for this target
 
 PRODUCT_BUNDLE_IDENTIFIER = com.yourcompany.MyRadio
+//APP_GROUP_IDENTIFIER =
 //DEVELOPMENT_TEAM =
 //CODE_SIGN_STYLE =
 
