Enable widget configuration
- Added simple Station to `ConfigurationIntent`
- Added intent handler to populate the list of available stations (from `SettingsStore.shared.streams`)
- If no station has been selected, the "station cycling widget configuration" is shown.
- Use single MyRadio.entitlement for app and all extensions

--- a/MyRadio/Info.plist
+++ b/MyRadio/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>APP_GROUP_IDENTIFIER</key>
+	<string>$(APP_GROUP_IDENTIFIER)</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
@@ -20,6 +22,10 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSUserActivityTypes</key>
+	<array>
+		<string>ConfigurationIntent</string>
+	</array>
 	<key>SRG_AUTH_DEFAULTS_KEY</key>
 	<string>$(SRG_AUTH_DEFAULTS_KEY)</string>
 	<key>SRG_AUTH_DEFAULTS_SUITE</key>
@@ -32,8 +38,6 @@
 	<string>$(SRG_AUTH_URL)</string>
 	<key>SRG_BASE_URL</key>
 	<string>$(SRG_BASE_URL)</string>
-	<key>APP_GROUP_IDENTIFIER</key>
-	<string>$(APP_GROUP_IDENTIFIER)</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
