--- a/MyRadio/Info.plist
+++ b/MyRadio/Info.plist
@@ -20,6 +20,10 @@
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+	<key>INSupportedMediaCategories</key>
+	<array>
+		<string>INMediaCategoryRadio</string>
+	</array>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSUserActivityTypes</key>
