Add Siri usage description
- It's currently unclear whether we really need to request Siri usage authorisation for our purpose

--- a/MyRadio/Info.plist
+++ b/MyRadio/Info.plist
@@ -72,5 +72,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSSiriUsageDescription</key>
+	<string>The list of radio stations is shared with Siri.</string>
 </dict>
 </plist>
